разметил html страницы «Подписка в статьях» (article.html)

--- a/src/pages/article.pug
+++ b/src/pages/article.pug
@@ -7,8 +7,55 @@ block meta
 block content
   .container.main--margin-top
     .row
-      .col-md-12.col-md
+      .col-md-12
+        +breadcrumbs(['Материалы', 'Новости'])
+    .row
+      .col-md-8.col-sm-12.col-xs-12
+        article.article
+          .article__img-wrap
+            img(src="")
+          .article__statistic
+            .article__tag Новости
+            +statistic
+          h1.article__title Яндекс.Учебники и РАО создадут хартию о цифровой образовательной среде
+          p.article__text Повседневная практика показывает, что консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Не следует, однако забывать, что консультация с широким активом позволяет оценить значение дальнейших направлений развития. Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий позволяет оценить значение дальнейших направлений развития. Задача организации, в особенности же рамки и место обучения кадров требуют от нас анализа систем массового участия. С другой стороны сложившаяся структура организации позволяет выполнять важные задания по разработке модели развития.
+          p.article__text Разнообразный и богатый опыт начало повседневной работы по формированию позиции требуют определения и уточнения модели развития. Не следует, однако забывать, что новая модель организационной деятельности требуют от нас анализа направлений прогрессивного развития. Разнообразный и богатый опыт начало повседневной работы по формированию позиции требуют от нас анализа систем массового участия. Значимость этих проблем настолько очевидна, что новая модель организационной деятельности способствует подготовки и реализации направлений прогрессивного развития. Таким образом реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании модели развития. Задача организации, в особенности же реализация намеченных плановых заданий позволяет оценить значение дальнейших направлений развития.
+          p.article__text Не следует, однако забывать, что рамки и место обучения кадров представляет собой интересный эксперимент проверки дальнейших направлений развития. Задача организации, в особенности же укрепление и развитие структуры влечет за собой процесс внедрения и модернизации направлений прогрессивного развития. Значимость этих проблем настолько очевидна, что сложившаяся структура организации способствует подготовки и реализации соответствующий условий активизации. Повседневная практика показывает, что сложившаяся структура организации требуют от нас анализа направлений прогрессивного развития.
+          p.article__text Таким образом реализация намеченных плановых заданий способствует подготовки и реализации дальнейших направлений развития.
 
+        section.share
+          .share__declaration
+            p Дорогие читатели!
+            p Делитель статьями со своими друзьями, коллегами, знакомыми, если они Вам показались симпатичными, а так же оценивайте их аплодисментами!
+            p Все это помогает нам развивать наш информационный канал, а Вам получать больше полезных и интересных статей!
+            p Еще раз вам спасибо!
+          .share__send.share__send--unautorized #[span Понравилась статья?] Отправьте себе на почту
+          .share__send.share__send--autorized #[span Лампа Леонидовна]
+            +auth-reg.share__controls
 
-    +head-with-links("Список разделов")
-  +section-list
+          form.share__form(method="POST", action="#", id="")
+            input.share__email-input(type="email", name="email", placeholder="E-mail")
+            button.btn.share__submit(type="submit") Отправить ссылку
+
+          .share__social
+            button.btn.share__applause Апплодировать
+            .share__social-links
+
+      block aside
+        aside.col-md-4.hidden-sm.hidden-xs
+          .article-interest
+            h2.article-interest__title Может быть интересно
+          +article__prev({
+            title: "Главные новости цифрового образования",
+            text: "В еженедельном дайджесте мы рассказываем о самом важном, что случилось с цифровым образованием в России и в мире за последнюю неделю. режиме предоставляет возможность ..."
+            })
+          +article__prev({
+            title: "10 тезисов книги «Другая школа»",
+            text: "Современная школа больше не работает — с этих слов начинается книга Александра Мурашева «Другая школа»."
+            })
+
+          .check-list
+            .check-list
+              h4 Чек-лист
+              p «Проверка подготовки материалов к уроку»
+            +auth-reg.check-list__controls
