--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -69,19 +69,19 @@ block content
         img: "/img/prev_01.png",
         tag: "Новости",
         text: 'В еженедельном дайджесте мы рассказываем о самом важном, что случилось с цифровым образованием в России и в мире за последнюю неделю.'
-        })
+        })(class="col-md-4")
       +article__prev({
         title: `Образовательное пространство России&#160;— это 70 лет консерватизма`,
         img: "/img/prev_02.png",
         tag: "Образование",
         text: "Союз дизайнеров России, Московский Архитектурный институт и компания «Сетевые исследования» объявили конкурс проектов по дизайну образовательного пространства российских университетов."
-        })
+        })(class="col-md-4")
       +article__prev({
         title: "Открыт прием заявок на конкурс иноваций в образовании",
         img: "/img/prev_03.png",
         tag: "Инновации",
         text: "С 1 апреля по 19 мая EdTech-стартапы могут подать заявки на участие в Конкурсе инноваций в образовании (КИвО). Прошедших первичный отбор ждет летний акселератор и открытый финал в Москве."
-        })
+        })(class="col-md-4")
 
   // Анонс мероприятий
   section.announcement
@@ -119,18 +119,18 @@ block content
         title: "5 правил личностного роста",
         img: "/img/vid_01.png",
         tag: "Видео-интервью",
-        })
+        })(class="col-md-4")
 
       +article__prev({
         title: "Первый урок. Как подготовиться и не волноваться",
         img: "/img/vid_02.png",
         tag: "Видео-интервью",
-        })
+        })(class="col-md-4")
       +article__prev({
         title: "Мотивационные приема поддержки молодых специалистов в школе",
         img: "/img/vid_03.png",
         tag: "Видео-интервью",
-        })
+        })(class="col-md-4")
 
   // Новости
   section.article-prev.article-prev--news.container
@@ -147,19 +147,19 @@ block content
         img: "/img/news_01.png",
         tag: "Новости",
         text: "Яндекс.Учебник и Российская академия образования совместно с учителями, родителями и экспертами разработают хартию о цифровой образовательной среде школы."
-        })
+        })(class="col-md-4")
       +article__prev({
         title: "Главные новости цифрового образовании",
         img: "/img/news_02.png",
         tag: "Новости",
         text: "В еженедельном дайджесте мы рассказываем о самом важном, что случилось с цифровым образованием в России и в мире за последнюю неделю."
-        })
+        })(class="col-md-4")
       +article__prev({
         title: "10 тезисов книги «Другая школа»",
         img: "/img/news_03.png",
         tag: "Новости",
         text: "Современная школа больше не работает — с этих слов начинается книга Александра Мурашева «Другая школа»."
-        })
+        })(class="col-md-4")
 
   // Научные статьи
   section.article-prev.article-prev--science.container
@@ -176,19 +176,19 @@ block content
         img: "/img/sci_01.png",
         tag: "ИКТ",
         text: "Онлайн-библиотека научной литературы КиберЛенинка заключила договор с Институтом научной информации по общественным наукам РАН. В течение двух месяцев ИНИОН разместит свои журналы в открытом доступе."
-        })
+        })(class="col-md-4")
       +article__prev({
         title: "Минпросвещения утвердило новую концепцию преподавания технологии",
         img: "/img/sci_02.png",
         tag: "Педагогика",
         text: "Если верить новой концепции преподавания уроков технологии, шитье фартуков и сборка табуретов останутся в прошлом."
-        })
+        })(class="col-md-4")
       +article__prev({
         title: "Яндекс проведет конференцию о технологиях в математическом образовании",
         img: "/img/sci_03.png",
         tag: "Образование",
         text: "Как повысить качество математического образования с помощью исследований? 18–21 марта 2019 года Яндекс и Международное общество исследователей в области психологии математического образования (PME) проведут масштабную конференцию «Психология и технологии в математическом образовании»."
-        })
+        })(class="col-md-4")
 
   // FAQ
   section.faq.container
@@ -219,13 +219,13 @@ block content
         img: "/img/inst_01.png",
         tag: "Инструкции",
         text: "Минпросвещения и Рособрсоюз запустили Национальную электронную платформу педагогического образования (НЭППО), на которой учителя смогут пройти курсы повышения квалификации и научиться разрабатывать свои онлайн-курсы."
-        })
+        })(class="col-md-4")
       +article__prev({
         title: "Открыт прием заявок на конкурс практик внутриклассного оценивания",
         img: "/img/inst_02.png",
         tag: "Инструкции",
         text: "До 15 апреля 2019 можно подать заявку на конкурс «Практики внутриклассного оценивания-2019». Победители получат денежные гранты и возможность выступить с докладом на международном симпозиуме в Болгарии."
-        })
+        })(class="col-md-4")
 
   //- Список разделов
   +section-list()
