--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -39,6 +39,8 @@ html(class='no-js', lang='ru')
       block content
           p Cодержимое
 
+    block aside
+
     include _footer.pug
 
     block page-bottom
