разметил html страницы «О нас» (about)

--- a/src/pug/mixins.pug
+++ b/src/pug/mixins.pug
@@ -83,6 +83,6 @@ mixin section-list()
 //- блок «Авторизация / Регистрация»
 mixin auth-reg
   .auth-reg&attributes(attributes)
-    button Авторизация
+    button(type="button") Авторизация
     span /
-    button Регистрация
+    button(type="button") Регистрация
