несколько мелких правок

--- a/src/pug/_header.pug
+++ b/src/pug/_header.pug
@@ -61,11 +61,11 @@ header
             .container
               ul.nav.navbar-nav
                 li.active
-                  a(href="https://new.razvitum.ru") Главная
+                  a(href="/") Главная
                 li
-                  a(href="https://new.razvitum.ru/about") О нас
+                  a(href="/about.html") О нас
                 li
-                  a(href="https://new.razvitum.ru/about/study") Об обучении
+                  a(href="/study.html") Об обучении
                 //- li.dropdown
                 //-   a.dropdown-toggle(href="https://new.razvitum.ru/about",data-toggle="dropdown", role="button", aria-haspopup="true", aria-expanded="false") О нас #[span.caret]
                 //-     ul.dropdown-menu
