--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -8,6 +8,7 @@
 .main-banner
   margin-bottom: 70px
   &__first-row
+    // width: 100%
     padding-top: 41px
     padding-bottom: 41px
     background: linear-gradient(60deg, #1422aa, #a3d3e5)
@@ -26,6 +27,9 @@
     color: $orange
     text-transform: none
     text-decoration: none
+    @media(max-width: 400px)
+      font-size: 3em
+
   &__text
     margin-top: 15px
     +ff-roboto
@@ -170,11 +174,15 @@
     width: 100%
     height: 100%
     background: linear-gradient(to top, rgba(255, 255, 255, 0), $accent)
+    @media(max-width: 400px)
+      padding: 20px 20px 14px 20px
   &__title
     flex-grow: 0
     margin: 0 0 30px 0
     color: #fff
     font-size: 2.25em
+    @media(max-width: 400px)
+      font-size: 1.75em
   &__link
     color: #fff
     &:hover
