--- a/src/pages/article.pug
+++ b/src/pages/article.pug
@@ -9,14 +9,14 @@ block content
     .row
       .col-md-12
         +breadcrumbs(['Материалы', 'Новости'])
-    .row
+    .row.mt-3
       .col-md-8.col-sm-12.col-xs-12
         article.article
           .article__img-wrap
-            img(src="")
+            img(src="/img/article.png", alt="")
           .article__statistic
-            .article__tag Новости
-            +statistic
+            a.article__tag Новости
+            +statistic("article")
           h1.article__title Яндекс.Учебники и РАО создадут хартию о цифровой образовательной среде
           p.article__text Повседневная практика показывает, что консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития. Не следует, однако забывать, что консультация с широким активом позволяет оценить значение дальнейших направлений развития. Значимость этих проблем настолько очевидна, что реализация намеченных плановых заданий позволяет оценить значение дальнейших направлений развития. Задача организации, в особенности же рамки и место обучения кадров требуют от нас анализа систем массового участия. С другой стороны сложившаяся структура организации позволяет выполнять важные задания по разработке модели развития.
           p.article__text Разнообразный и богатый опыт начало повседневной работы по формированию позиции требуют определения и уточнения модели развития. Не следует, однако забывать, что новая модель организационной деятельности требуют от нас анализа направлений прогрессивного развития. Разнообразный и богатый опыт начало повседневной работы по формированию позиции требуют от нас анализа систем массового участия. Значимость этих проблем настолько очевидна, что новая модель организационной деятельности способствует подготовки и реализации направлений прогрессивного развития. Таким образом реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании модели развития. Задача организации, в особенности же реализация намеченных плановых заданий позволяет оценить значение дальнейших направлений развития.
@@ -31,6 +31,7 @@ block content
             p Еще раз вам спасибо!
           .share__send.share__send--unautorized #[span Понравилась статья?] Отправьте себе на почту
           .share__send.share__send--autorized #[span Лампа Леонидовна]
+          .share__auth
             +auth-reg.share__controls
 
           form.share__form(method="POST", action="#", id="")
