--- a/src/scss/_page.sass
+++ b/src/scss/_page.sass
@@ -40,6 +40,39 @@
     color: $lightgray
     text-decoration: none
 
+.stat
+  border: none
+  background: none
+  &__item
+    margin-right: 1em
+    font-size: 0.75em
+    color: $lightgray
+  &--article .stat__item
+    margin-right: 2em
+    font-size: 1em
+
+.auth-reg
+  +ff-arial
+  font-style: italic
+  font-size: 1em
+  &__item
+    display: inline-block
+    margin: 0
+    padding: 0
+    background-color: rgba(255, 255, 255, 0)
+    border: none
+    outline: 0
+    cursor: pointer
+    text-decoration: underline
+    &:hover
+      color: $accent
+  &__divider
+    margin-left: 5px
+    margin-right: 5px
+    font-size: 1em
+    color: $lightgray
+    text-decoration: none
+
 .display-filter
   align-self: baseline
   +ff-arial
