--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -2,13 +2,15 @@
 @import "spritePNG"
 @import "mixins/calc"
 @import "_page"
-
+@import "blocks/article"
+@import "blocks/about"
 
 // Главный баннер
 .main-banner
   margin-bottom: 70px
   &__first-row
     // width: 100%
+    margin: 0
     padding-top: 41px
     padding-bottom: 41px
     background: linear-gradient(60deg, #1422aa, #a3d3e5)
@@ -241,14 +243,9 @@
     color: $textgray
     font-size: 0.875em
     line-height: 1.714em
-  &__statistic
-    border: none
-    background: none
-  &__stat-item
-    font-size: 0.75em
-    color: $lightgray
   &--margin-bottom
     margin-bottom: 60px
+
 
 // Заголовки разделов
 .section-head
