пара правок в главном баннере на главной

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,7 +7,7 @@ block meta
 block content
   // main banner
   section.main-banner
-    .main-banner__first-row.jumbotron
+    .jumbotron.main-banner__first-row
       .container
         .row
           h3.col-xs-12.col-lg-12.main-banner__title Эксперт в образовании
