--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -31,14 +31,16 @@
     text-decoration: none
     @media(max-width: 400px)
       font-size: 3em
-
-  &__text
+  &__text, p
     margin-top: 15px
     +ff-roboto
     font-size: 3em
     font-weight: 400
     line-height: 1.12em
     color: #fff
+    @media(max-width: 400px)
+      font-size: 2em
+
   &__statistic
     margin-top: 97px
   &__stat-item
