отключил подключение fontawesome внешним файлом — теперь вшивается прямо в vendor.css

--- a/src/scss/vendor.sass
+++ b/src/scss/vendor.sass
@@ -11,7 +11,11 @@
 /* Заменил зависимости для компиляции в vendor.css без сервера*/
 /* bootstrap вшивается в css, остальные подключаются внешне*/
 @import "../assets/bootstrap-sass-3.4.1/assets/stylesheets/_bootstrap.scss"
-@import "../assets/fontawesome-free-5.12.0-web/css/all.css"
+@import "../assets/fontawesome-free-5.12.0-web/scss/fontawesome.scss";
+@import "../assets/fontawesome-free-5.12.0-web/scss/brands.scss";
+@import "../assets/fontawesome-free-5.12.0-web/scss/regular.scss";
+@import "../assets/fontawesome-free-5.12.0-web/scss/solid.scss";
+@import "../assets/fontawesome-free-5.12.0-web/scss/v4-shims.scss";
 // @import "~eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css"
 // @import "../src/node_modules/select2/dist/css/select2.css"
 // @import "~select2-bootstrap-theme/dist/select2-bootstrap.css"
