--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -8,7 +8,7 @@ html(class='no-js', lang='ru')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(href='/favicon.ico', rel='shortcut icon')
-    link(rel='stylesheet', href='/css/all.min.css')
+    //- link(rel='stylesheet', href='/css/all.min.css')
     link(rel='stylesheet', href='/css/vendor.css')
     // фавиконки для различных устройств — https://realfavicongenerator.net
     link(rel="apple-touch-icon", sizes="180x180", href="/img/favicon/apple-touch-icon.png")
@@ -47,6 +47,6 @@ html(class='no-js', lang='ru')
     block page-bottom
       script(src='/js/jquery-3.4.1.min.js')
       script(src='/js/bootstrap.js')
-      script(src='/js/all.js')
+      //- script(src='/js/all.js')
       script(src='/js/vendors.min.js')
       //- script(src='/js/script.min.js')
