--- a/src/pages/about.pug
+++ b/src/pages/about.pug
@@ -14,19 +14,39 @@ block content
   section.about-carousel.jumbotron
     .container
       .row
+        .about-carouel.carousel.slide(id="carousel-about", data-ride="carousel")
+          .carousel-inner(role="listbox")
+            .item.active
+              img(src="/img/Banner5.jpg", alt="")
+            .item
+              img(src="/img/Banner6.jpg", alt="")
+            .item
+              img(src="/img/Banner7.jpg", alt="")
+            .item
+              img(src="/img/Banner8.jpg", alt="")
   section.about-centre.container(id="about-centre")
     .row
       .col-xs-12
         h2.about__title О центре
         p.about__text Санкт-Петербургский центр дополнительного профессионального образования учрежден 15 февраля 2013 года, имеет образовательную лицензию. На рынке образовательных услуг Центр реализует программы повышения квалификации и профессиональной переподготовки в дистанционном формате. Наша аудитория — руководители и специалисты системы образования. Ежегодно мы обучаем более 10 000 слушателей по всей России.
         h3.about__subhead Наш подход к реализации образовательных программ:
-        ul.about__list
-          li.about__list-item Мониторинг законодательства и проведение исследований в области профессиональных интересов нашей аудитории;
-          li.about__list-item Подбор экспертов определенной области знаний, в соответствии с направленностью образовательных программ;
-          li.about__list-item Наличие внутренней системы контроля качества и внешний аудит образовательных программ.
+    .about__list
+      .row
+        .col-md-3.hidden-sm.hidden-xs
+        .col-md-6.col-sm-12.about__list-item.about__list-item--one Мониторинг законодательства и проведение исследований в области профессиональных интересов нашей аудитории;
+        .col-md-3.hidden-sm.hidden-xs
+      .row
+        .col-md-3.hidden-sm.hidden-xs
+        .col-md-6.col-sm-12.about__list-item.about__list-item--two Подбор экспертов определенной области знаний, в соответствии с направленностью образовательных программ;
+        .col-md-3.hidden-sm.hidden-xs
+      .row
+        .col-md-3.hidden-sm.hidden-xs
+        .col-md-6.col-sm-12.about__list-item.about__list-item--three Наличие внутренней системы контроля качества и внешний аудит образовательных программ.
+        .col-md-3.hidden-sm.hidden-xs
     .row
-      .col-xs-12.about__banner
-        p.about__banner-text Мало кто знает, что наша история началась в 2011 году, с организации всероссийского конкурса изобразительного искусства «Ангел Вдохновения», по воле случая, как мы любим говорить.
+      .col-xs-12
+        .quotes
+          p.quotes__text Мало кто знает, что наша история началась в 2011 году, с организации всероссийского конкурса изобразительного искусства «Ангел Вдохновения», по воле случая, как мы любим говорить.
 
   section.about-docs.container
     .row
@@ -41,9 +61,10 @@ block content
       .col-md-4.col-sm-12.col-xs-12
 
     .row
-      .col-xs-12.about__banner
-        p.about__banner-text Мы ежедневно создаем условия для развития способностей и профессионального роста, чтобы каждый участник смог проявить себя и не остаться без внимания для дальнейшего желания идти к своей мечте.
-        p.about__banner-text Миссия организация, сформулирована в 2011 г.
+      .col-xs-12
+        .quotes
+          p.quotes__text Мы ежедневно создаем условия для развития способностей и профессионального роста, чтобы каждый участник смог проявить себя и не остаться без внимания для дальнейшего желания идти к своей мечте.
+          p.quotes__text Миссия организация, сформулирована в 2011 г.
 
   section.about-history.container(id="about-history")
     .row
@@ -75,16 +96,18 @@ block content
         h2.about__title Фокус на инновационные решения
         p.about__text Для нас цифровые технологии — это возможность быть ближе к клиенту.
     .row
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4         Электронный документооборот
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4         Единое окно приема документов
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4         Адаптив под все типы устройств
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4         Упрощенная регистрация
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4         Интуитивный интерфейс личного кабинета
-      .about-innovations__item.col-xs-12.col-sm-12.col-md-4         Умный подбор программ
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Электронный документооборот
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Единое окно приема документов
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Адаптив под все типы устройств
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Упрощенная регистрация
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Интуитивный интерфейс личного кабинета
+      .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Умный подбор программ
       .about-innovations__item.col-xs-12.col-sm-12.col-md-4         Индивидуальный образовательный маршрут
       .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Интерактивный образовательный контент
       .about-innovations__item.col-xs-12.col-sm-12.col-md-4 Учебная статистика и прогресс
 
   section.about-facts(id="about-facts")
+  script.
+    $('#carousel-active').carousel();
 
 
