--- a/src/scss/_fonts.sass
+++ b/src/scss/_fonts.sass
@@ -4,6 +4,7 @@
 // +font-face("RobotoBlack", "/fonts/RobotoBlack/RobotoBlack")
 +font-face("Roboto", "/fonts/roboto-regular")
 +font-face("RobotoBold", "/fonts/roboto-bold")
++font-face("RobotoLight", "/fonts/Roboto-Light")
 +font-face("Font Awesome 5 Free", "../webfonts/fa-regular-400")
 +font-face("Font Awesome 5 Solid", "../webfonts/fa-solid-400")
 +font-face("Font Awesome 5 Brand", "../webfonts/fa-brands-400")
@@ -11,6 +12,10 @@
 
 @mixin ff-roboto()
   font-family: Roboto, Arial, sans-serif
+  font-weight: 400
+
+@mixin ff-roboto-light()
+  font-family: RobotoLight, Arial, sans-serif
   font-weight: 400
 
 @mixin ff-roboto-bold()
