--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -43,6 +43,8 @@ html(class='no-js', lang='ru')
     block footer
       include _footer.pug
 
+    block script
+
     block page-bottom
       script(src='/js/jquery-3.4.1.min.js')
       script(src='/js/bootstrap.js')
